--- a/simple-github/build.gradle
+++ b/simple-github/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     kapt "android.arch.lifecycle:compiler:$archComponentVersion"
     kapt "android.arch.persistence.room:compiler:$archComponentVersion"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
+
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 }
