--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -21,4 +21,5 @@ ext {
     rxJavaVersion = '2.1.3'
     supportLibVersion = '27.1.0'
     constraintLayoutVersion = '1.1.2'
+    daggerVersion = '2.15'
 }
