--- a/simple-github/gradle.properties
+++ b/simple-github/gradle.properties
@@ -1,2 +1,2 @@
-GITHUB_CLIENT_ID="YOUR_GITHUB_CLIENT_ID"
-GITHUB_CLIENT_SECRET="YOUR_GITHUB_CLIENT_SECRET"
+GITHUB_CLIENT_ID="c820190f87bd5944410f"
+GITHUB_CLIENT_SECRET="331f97bce7bcff7d881cdc6d70117cf25740f9e0"
