--- a/simple-github/src/main/AndroidManifest.xml
+++ b/simple-github/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- 새로 작성한 SimpleGithubApp 클래스를 어플리케이션 클래스로 등록하기 위해 매니페스트의 네임을 설정 -->
     <application
+        android:name=".SimpleGithubApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
