FEAT: ADD DAGGER

--- a/simple-github/gradle.properties
+++ b/simple-github/gradle.properties
@@ -1,2 +1,2 @@
-GITHUB_CLIENT_ID="YOUR_GITHUB_CLIENT_ID"
-GITHUB_CLIENT_SECRET="YOUR_GITHUB_CLIENT_SECRET"
+GITHUB_CLIENT_ID="b545a45833856b650497"
+GITHUB_CLIENT_SECRET="90009b039ece5061c7f4a086c23373f48e9a7d08"
