--- a/simple-github/build.gradle
+++ b/simple-github/build.gradle
@@ -26,7 +26,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    dataBinding {
+        enabled = true
+    }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
