--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,23 +1,24 @@
 ext {
     // Build configuration
-    buildToolsVersion = '27.0.2'
-    minSdkVersion = 15
+    buildToolsVersion = '27.0.3'
+    minSdkVersion = 16
     compileSdkVersion = 27
     targetSdkVersion = 27
 
     // Gradle plugin
-    androidPluginVersion = '3.0.1'
+    androidPluginVersion = '3.1.3'
 
     // Library
     ankoVersion = '0.10.3'
-    archComponentVersion = '1.0.0'
+    archComponentVersion = '1.1.1'
     glideVersion = '4.1.1'
     gsonVersion = '2.7'
-    kotlinVersion = '1.2.0'
+    kotlinVersion = '1.2.51'
     okHttpVersion = '3.8.1'
     retrofitVersion = '2.3.0'
-    rxAndroidVersion = '2.0.1'
+    rxAndroidVersion = '2.0.2'
     rxBindingVersion = '2.0.0'
     rxJavaVersion = '2.1.3'
-    supportLibVersion = '27.0.2'
+    supportLibVersion = '27.1.1'
+    constraintLayoutVersion = '1.1.2'
 }
